Add FAQ for Qualimap on Java 17